client/src/partition/budget_measures_subapp/BudgetMeasuresPartition.scss
@import '../../common_css/common-variables';

// Partition diagram Style overwrites
.budget-measure-partiton-area > .partition-diagram-outer-area > .partition-diagram {
  border-radius: 10px;

  & > .header {
    color: $textLightColor;
    font-size: 22px;
    font-weight: $mediumFontWeight;
    margin-top: 10px;
  }

  & > .partition-item {
    color: $textColor;

    &.partition-item__overflowing > .partition-item--title {
      color: $textLightColor;
      font-weight: $mediumFontWeight;
    }
    
    &:not(.partition-item__overflowing) > .partition-item--title {
      font-weight: $heavyFontWeight;
    }

    &.partition-item__negative_value > .partition-item--negative-title-backing > .partition-item--title {
      color: $failLightColor;
      font-weight: $mediumFontWeight;
    }
    
    &.root {
      background-color: rgba(0, 0, 0, 0.3);
      & > .partition-item--title {
        font-weight: $heavyFontWeight;
        color: $textLightColor;
        & > .root-sub-note {
          margin-top: 22px;
          font-size: 20px;
        }
        & > a {
          color: $textColor;
        }
      }
    }

    & > .partition-popup {
      color: $backgroundColor;
      background-color: $primaryColor;
      & > .popup-pointer {
      	border-right: 40px solid $primaryColor;
      }
      & > .popup-decription-text {
        color: $backgroundColor;
      }
      & > .btn {
        color: $textColor;
      }
    }
  }
}

.budget-measure-popup-text-cells {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 5px 0px 5px 0px;

  & > .popup-text-cells-left {
    border: 1px solid white;
    border-width: 1px 1px 0px 0px;
  }
  & > .popup-text-cells-right  {
    text-align: center;
    border-top: 1px solid white;
  }

  & > .popup-text-cells-small {
    flex-basis: 50px;
    flex-shrink: 0;
  }
  & > .popup-text-cells-large {
    flex-grow: 1;
    max-width: 305px;
  }
}

